<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Authenti-Scan</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tag_detected">Tag detected!</string>
    
    <string name="menu">Menu</string>
    <string name="reset">Reset</string>
    <string name="history">History</string>
    <string name="about">About</string>
    
    <string name="nfc_scan">1. NFC Scan</string>
    <string name="step1">Simply place the Bitcoin near the device and press Scan to begin.</string>
    <string name="nfc_next">Next</string>
    <string name="scan">Scan</string>
    <string name="step1popup">NFC scan complete!</string>
    <string name="ok">OK</string>
    
    <string name="visual_scan">2. Visual Scan</string>
    <string name="step2">[INSERT PICTURE]</string>
    <string name="snappic">SNAP PICTURE!</string>
    <string name="entermanually">Input serial number:</string>
    <string name="enter">Enter</string>
    <string name="skip">Skip</string>
    <string name="serialnumberlabel">Serial Number:</string>
    <string name="serialnumber">1AC3XF9115OSL0L</string>
    <string name="next">Continue</string>
    
    <string name="network_scan">3. Network Scan</string>
    <string name="success">Validation complete!</string>
	
	<string name="result_button">4. Result</string>
	<string name="accept">Accept</string>
	<string name="reject">Reject</string>
	<string name="details">Details</string>
	
	<string name="desc"></string>
	
	<string name="PLACEHOLDER_01">100 micro-bitcoin</string>
	<string name="PLACEHOLDER_02">Authenti-Scan recommends accepting it</string>
	
	
	<style name="ButtonText">
    <item name="android:layout_width">fill_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#ffffff</item>
    <item name="android:gravity">center</item>
    <item name="android:layout_margin">3dp</item>
    <item name="android:textSize">30sp</item>
    <item name="android:textStyle">bold</item>
    <item name="android:shadowColor">#000000</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item>
    </style>
    <style name="SmallButtonText">
    <item name="android:layout_width">wrap_content</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#000000</item>
    <item name="android:gravity">center</item>
    <item name="android:layout_margin">3dp</item>
    <item name="android:textSize">20sp</item>
    <item name="android:shadowColor">#000000</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item>
    

</style>
</resources>