<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

<LinearLayout android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@color/gray"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnNFC"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:gravity="left"
        android:text="@string/nfc_scan"
        android:textColor="#FFFFFFFF" />

    <LinearLayout
        android:id="@+id/panelNfc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center"
            android:text="@string/step1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/scan"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dip"
            android:layout_marginRight="80dip"
            android:text="@string/scan" />
    </LinearLayout>

    <Button
        android:id="@+id/btnVISUAL"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:gravity="left"
        android:text="@string/visual_scan"
        android:textColor="#FFFFFFFF" />

    <LinearLayout
        android:id="@+id/panelVisual"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="@string/desc"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#000000"
            android:gravity="center"
            android:padding="5dip"
            android:src="@drawable/step2test" />

        <LinearLayout
            android:id="@+id/panelSnappic1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF"
            android:orientation="vertical" >

            <Button
                android:id="@+id/snappic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dip"
                android:layout_marginRight="80dip"
                android:text="@string/snappic" />

            <Button
                android:id="@+id/manual"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/entermanually" />
            <Button
                android:id="@+id/skip"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/skip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/panelSnappic2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:gravity="center"
                android:text="@string/serialnumberlabel" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:gravity="center"
                android:text="@string/serialnumber"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/next"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnNETWORK"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:gravity="left"
        android:text="@string/network_scan"
        android:textColor="#FFFFFFFF" />

    <LinearLayout
        android:id="@+id/panelNetwork"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/panelNwk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/step3pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/step3pic" />

            <TextView
                android:id="@+id/success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/success" />

            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/note"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>
    
     <Button
        android:id="@+id/btnRESULT"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:gravity="left"
        android:text="@string/result_button"
        android:textColor="#FFFFFFFF" />

    <LinearLayout
        android:id="@+id/panelResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:orientation="vertical" >
        
        <LinearLayout
            android:id="@+id/panelResultChild"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/denomination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="number" 
                android:text="@string/PLACEHOLDER">

            </EditText>

            <EditText
                android:id="@+id/scan_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textMultiLine|number"
                android:text="@string/PLACEHOLDER" >

            </EditText>

            <LinearLayout
                android:id="@+id/nwkButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFFFFFF"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/accept"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/accept" />

                <Button
                    android:id="@+id/reject"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/reject" />
            </LinearLayout>
			
			<Button
                android:id="@+id/reset"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reset" />
            
        </LinearLayout>
    	
    </LinearLayout>
    
   

</LinearLayout>
</ScrollView>